[tool.poetry]
name = "venice-image-generator"
version = "0.1.0"
description = "A command-line utility for generating images using the Venice AI API"
authors = ["Juraj Bednar <juraj@bednar.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
